fix: header height on mobile resolutions work.html & article.html

--- a/src/sass/blocks/header/_header.scss
+++ b/src/sass/blocks/header/_header.scss
@@ -6,6 +6,9 @@
   &_prices {
     height:auto;
   }
+  &_article {
+    height:auto;
+  }
   &_animated {
     animation: fadeIn 1.5s;
   }
